Initial commit with APK link

--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
         <div class="text">
             <h1>Craving Something Delicious? <br> We Deliver It Fast & Fresh!</h1>
             <p>Satisfy your hunger with just a few taps. Discover your favorite meals from local restaurants and get them delivered straight to your door—hot, tasty, and right on time.</p>
-            <a href="FoodOn.apk" download
-   class="inline-flex items-center bg-[#f9b40f] text-[#380041] px-8 py-4 rounded-full font-bold text-lg hover:bg-yellow-400 shadow-xl hover:shadow-2xl transform transition-all duration-300 hover:-translate-y-1">
-   Download APK
-</a>
-
+            <a href="FoodOn.apk" class="btn">Download Here!</a>
             <a href="#" class="btn">Download PDF!</a>
         </div>
 
