--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="text">
             <h1>Craving Something Delicious? <br> We Deliver It Fast & Fresh!</h1>
             <p>Satisfy your hunger with just a few taps. Discover your favorite meals from local restaurants and get them delivered straight to your door—hot, tasty, and right on time.</p>
-            <a href="FoodOn.apk" class="btn">Download App Here!</a>
-            <a href="download/FoodDelivery.pdf" class="btn">Download PDF!</a>
+            <a href="FoodOn.apk" download class="btn">Download App Here!</a>
+            <a href="download/FoodDelivery.pdf" download class="btn" >Download PDF!</a>
         </div>
 
 
